# voiceforge

./: .bandit.yaml  .cursorignore  .editorconfig  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .semgrepignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pyproject.toml  sonar-project.properties  voiceforge.yaml.example
.github/: CODEOWNERS  README.md  dependabot.yml  pull_request_template.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug-or-task.md  bug_report.md  config.yml  feature.md  feature_request.md  release-regression.yml  security-incident.yml
.github/rulesets/: main-protection.json
.github/workflows/: codeql.yml  docs-consistency.yml  gitleaks.yml  maintenance-weekly.yml  nightly.yml  release-draft.yml  release.yml  security-weekly.yml  semgrep.yml  sonar.yml  test.yml
desktop/: .gitignore  DBUS.md  README.md  copilot-overlay.html  index.html  package-lock.json  package.json  playwright.config.js  vite.config.js
desktop/e2e/: a11y.spec.js  autopilot.spec.js  nav.spec.js  regression.spec.js  visual.spec.js
desktop/e2e-native/: package-lock.json  package.json  wdio.conf.js
desktop/e2e-native/specs/: native-smoke.e2e.js
desktop/e2e/helpers/: desktopHarness.js
desktop/flatpak/: com.voiceforge.app.yaml
desktop/src/: copilot-overlay.css  copilot-overlay.js  main.js  platform.js  styles.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: commands.rs  dbus_signals.rs  lib.rs  main.rs  tray.rs
docs/: DOCS-INDEX.md  PROJECT_AUDIT_AND_ROADMAP.md  README.md  desktop-tauri-implementation-plan.md  development-plan-post-audit-2026.md  error-codes.md  first-meeting-5min-en.md  first-meeting-5min.md  grafana-voiceforge-dashboard.json  plans.md  roadmap-priority.md  voiceforge-copilot-architecture.md
docs/adr/: 0001-core-scope-0.1.md  0002-action-items-table.md  0002-archive-first-cleanup.md  0003-version-reset-0.1-alpha1.md  0004-desktop-tauri-dbus.md  0005-telegram-bot.md  0006-calendar-integration.md  README.md
docs/architecture/: README.md  overview.md  runtime-flow.md  voiceforge-arch.jsx
docs/archive/: PROJECT_AUDIT_AND_ROADMAP.md  README.md  desktop-tauri-implementation-plan.md  development-plan-post-audit-2026.md  docs-consolidation-2026-03.md  roadmap-priority.md
docs/archive/audit/: FULL_AUDIT_2026_snapshot.md  PROJECT_AUDIT_AND_ROADMAP_2026.md  REMAINING_AND_PLAN_TO_100_2026.md  audit-2026-03-full.md  audit-to-github-map_2026_snapshot.md
docs/audit/: README.md  audit-2026-03.md  audit-to-github-map.md  audit-vs-code-reality-2026-03.md  audit.md
docs/en/: README.md  first-meeting-5min.md
docs/history/: closed-plans-and-roadmap.md
docs/plans/: MANUAL-AND-CANNOT-DO.md  backlog-and-actions.md  desktop-gui-phase2-10-blocks.md  roadmap-100-blocks.md  video-meetings-integration.md
docs/runbooks/: PROJECT-STATUS-SUMMARY.md  README.md  agent-context.md  agent-session-handoff-rule.md  ai-tooling-setup.md  alpha0.1-dod.md  alpha2-checklist.md  backlog.md  bootstrap.md  calendar-integration.md  claude-proposal-alignment.md  cli-commands-and-run.md  config-env-contract.md  copilot-extensibility-kc13.md  copilot-program-map.md  copilot-qa-and-release.md  cursor-agent-setup.md  cursor.md  dependabot-review.md  dependencies.md  desktop-build-deps-en.md  desktop-build-deps.md  desktop-gui-testing.md  desktop-qa-plan.md  desktop-release-gate-matrix.md  desktop-updater.md  doc-governance.md  git-github-practices-rule.md  git-github-practices.md  installation-guide.md  keyring-keys-reference.md  kv2-overlay-signoff-checklist.md  kv3-pilot-scenario-template.md  legal-consent-kv1.md  lifecycle-smoke.md  maintenance-mode.md  next-iteration-focus.md  observability-alerts.md  offline-package.md  phase-e-decision-log.md  (+27 more)
monitoring/: README.md  alerts.yml  docker-compose.yml  prometheus.yml
monitoring/grafana/: voiceforge-dashboard.json
scripts/: apply_main_ruleset.sh  block_direct_main_push.sh  bootstrap.sh  build-flatpak.sh  check-desktop-deps.sh  check_cli_contract.sh  check_docs_consistency.py  check_maintenance_state.py  check_new_code_coverage.sh  check_release_metadata.py  check_release_proof.py  check_repo_governance.sh  check_sonar_status.sh  check_toolchain.sh  clean.sh  cleanup_github_pr_sonar.py  create_alpha_milestone_issues.sh  create_copilot_program_issues.sh  create_productization_issues.sh  create_quality_remediation_issues.sh  dependabot_dismiss_moderate.py  doctor.sh  enable_updater.py  ensure_precommit_env.sh  eval_ab.py  gen_stt_fixtures.py  git_credential_keyring_pat.py  install_linuxdeploy_toolbox.sh  preflight_repo.sh  ruleset_enforcement.sh  run_desktop_native_smoke.sh  setup-desktop-toolbox.sh  smoke_clean_env.sh  sonar_configure_relaxed_gate.py  sonar_fetch_issues.py  sonar_list_branches.py  update_deps.sh  verify-desktop-packaging.sh  verify_pr.sh  voiceforge.service  (+1 more)
security/: voiceforge.apparmor
src/voiceforge/: __init__.py  __main__.py  main.py
tests/: baseline_benchmark.json  benchmark_rag.py  benchmark_stt.py  conftest.py  test_action_export.py  test_audio_buffer.py  test_audio_capture.py  test_audit_log.py  test_benchmark_pipeline.py  test_buffer_mmap.py  test_caldav_poll.py  test_calendar.py  test_cli_e2e_smoke.py  test_cli_helpers_contracts.py  test_cli_snapshots.py  test_cli_surface.py  test_concurrent_access.py  test_config_settings.py  test_config_show.py  test_contract_batch119.py  test_core_commands.py  test_core_metrics.py  test_cost_anomaly.py  test_cost_estimate.py  test_coverage_hotspots_batch99.py  test_daemon_batch116.py  test_daemon_helpers.py  test_daemon_streaming_smart_trigger_model_manager.py  test_daily_report.py  test_db_migrations.py  test_dbus_contract_snapshot.py  test_dbus_service.py  test_desktop_notify.py  test_diarizer_mock.py  test_download_models.py  test_e13_core_logic.py  test_encryption.py  test_export_clipboard.py  test_failure_injection.py  test_history_output.py  (+44 more)
tests/eval/: __init__.py  test_llm_eval.py
tests/fixtures/: README.md
updates/: update.json
(+119 files in other folders)
