[package]
name = "voiceforge-desktop"
version = "0.2.0-alpha.1"
edition = "2021"
description = "VoiceForge desktop UI (Tauri + D-Bus)"

[lib]
name = "voiceforge_desktop"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"
zbus = "4"
# Pin glib >= 0.20 for RUSTSEC-2024-0429 (VariantStrIter unsoundness)
glib = "0.20"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
