[package]
name = "voiceforge-desktop"
version = "1.0.0-beta.1"
edition = "2021"
description = "VoiceForge desktop UI (Tauri + D-Bus)"

[lib]
name = "voiceforge_desktop"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["image-png", "tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-notification = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-autostart = "2"
tauri-plugin-store = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"
zbus = "4"
# Pin glib >= 0.20 for RUSTSEC-2024-0429 (VariantStrIter unsoundness)
glib = "0.20"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
